<resources>
    <string name="app_name">HomeDecors</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email address</string>
    <string name="prompt_password">Password</string>
    <string name="title_password">Password</string>
    <string name="title_phone">Phone number</string>
    <string name="title_user">User name</string>
    <string name="action_sign_in">Register</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="logout">Logout</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="error_username">Please enter username</string>
    <string name="error_phonenumber">Please enter phone number</string>
    <string name="error_email">Please enter email address</string>
    <string name="error_password">Please enter password</string>
    <string name="error_comment">Please enter your review.</string>

    <string name="review_title">Reviews :</string>
    <string name="kingsize_bed">King Size Bed Cover</string>
    <string name="kingsize_bed_content">Give Your Space an Aesthetic Touch With Beautiful Curtains, carpets, Cushions and more. Enhance Your Shopping Experience With Our Personalised Recommendations. Best Deals</string>
    <string name="rating_text">Rate your concept</string>
    <string name="garden_table">Garden Table</string>
    <string name="write_comments_txt">Share more about your experience</string>
    <string name="write_comments">Share details of your own experience at this place</string>


</resources>