<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/designer_logo"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <EditText
            android:id="@+id/username1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            />

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/login1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="64dp"
            android:enabled="false"
            android:text="@string/action_sign_in" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:background="@drawable/password_bg">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_margin="@dimen/margin_10dp"
                android:padding="10dp"
                android:src="@drawable/ic_user"
                android:layout_gravity="center"
                android:tint="#808080"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:drawablePadding="10dp"
                android:ems="2"
                android:gravity="center|start"
                android:hint="@string/title_user"
                android:textSize="14sp"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/margin_10dp"
                android:paddingStart="@dimen/margin_15dp"
                android:paddingTop="@dimen/margin_15dp"
                android:paddingEnd="@dimen/margin_15dp"
                android:singleLine="true"
                android:text=""
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:typeface="monospace" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:background="@drawable/password_bg">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_margin="@dimen/margin_10dp"
                android:padding="10dp"
                android:src="@drawable/ic_phone_call"
                android:layout_gravity="center"
                android:tint="#808080"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:drawablePadding="10dp"
                android:ems="2"
                android:gravity="center|start"
                android:hint="@string/title_phone"
                android:textSize="14sp"
                android:inputType="text|number"
                android:maxLines="1"
                android:padding="@dimen/margin_10dp"
                android:paddingStart="@dimen/margin_15dp"
                android:paddingTop="@dimen/margin_15dp"
                android:paddingEnd="@dimen/margin_15dp"
                android:singleLine="true"
                android:text=""
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:typeface="monospace" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:background="@drawable/password_bg">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:src="@drawable/ic_phone_call"
                android:layout_gravity="center"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey"/>

                <EditText
                    android:id="@+id/phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:drawablePadding="10dp"
                    android:ems="2"
                    android:gravity="center|start"
                    android:hint="@string/title_phone"
                    android:textSize="14sp"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="@dimen/margin_10dp"
                    android:paddingStart="@dimen/margin_15dp"
                    android:paddingTop="@dimen/margin_15dp"
                    android:paddingEnd="@dimen/margin_15dp"
                    android:singleLine="true"
                    android:text=""
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:typeface="monospace" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:background="@drawable/password_bg">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:src="@drawable/ic_password"
                android:layout_gravity="center"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:drawablePadding="10dp"
                    android:ems="2"
                    android:gravity="center|start"
                    android:hint="@string/title_password"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/margin_10dp"
                    android:paddingStart="@dimen/margin_15dp"
                    android:paddingTop="@dimen/margin_15dp"
                    android:paddingEnd="@dimen/margin_15dp"
                    android:singleLine="true"
                    android:text=""
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:typeface="monospace" />

        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="26dp"
            android:enabled="false"
            android:text="@string/action_login"
            android:background="@drawable/bg_button_shape"/>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="26dp"
            android:text="@string/action_sign_in"
            android:background="@drawable/bg_button_shape"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>